--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <div class="back">
         <div>
-            <img src="../assets/images/empire.jpg" class="pic"/>
+            <img src="empire.jpg" class="pic"/>
         </div>
         <div class="line">
             <input type="radio"/>
